@@ -34,8 +34,12 @@ public class SceneHelper {
   public static List<File> getAvailableSceneFiles(File sceneDir) {
     File[] sceneFiles = sceneDir
         .listFiles((dir, name) -> name.endsWith(SceneDescription.SCENE_DESCRIPTION_EXTENSION));
-    List<File> fileList = new ArrayList<>(sceneFiles.length);
-    Collections.addAll(fileList, sceneFiles);
-    return fileList;
+    if (sceneFiles != null) {
+      List<File> fileList = new ArrayList<>(sceneFiles.length);
+      Collections.addAll(fileList, sceneFiles);
+      return fileList;
+    } else {
+      return Collections.emptyList();
+    }
   }
 }
