@@ -47,7 +47,7 @@ import java.util.concurrent.atomic.AtomicReference;
  */
 public class ChunkyLauncher {
 
-  public static final String LAUNCHER_VERSION = "v1.9.1";
+  public static final String LAUNCHER_VERSION = "v1.9.2";
 
   protected String java;
 
